--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">Once Journal</string>
+
+    <string name="menu_add_title">Add Entry</string>
+    <string name="menu_add_subText">Build your sentiment journal by adding new entries</string>
+
+    <string name="menu_stats_title">View Statistics</string>
+    <string name="menu_stats_subText">View your overall sentiment statistics</string>
+
+    <string name="menu_settings_title">App Settings</string>
+    <string name="menu_settings_subText">Adjust app settings or upgrade to premium</string>
+
+    <string name="menu_rate_title">Rate App</string>
+    <string name="menu_rate_subText">Rate or leave a review of the app</string>
+
 </resources>
